

syntax = "proto3";

message BlockAdd
{
    int32 id = 1;
    string type = 2;
}

message BlockStart
{
    int32 id = 1;
}

message BlockStop
{
    int32 id = 1;
}

message BlockDel
{
    int32 id = 1;
}

message BlockBind
{
    int32 id = 1;
    int32 port = 2;
    int32 dest = 3;
}

message ConfHookZmq
{
    int32 id = 1;
    bool client = 2;
    int32 type = 3;
    string name = 4;
    string addr = 5;
}

message Command
{
    oneof type
    {
        // Block creation
        BlockAdd add = 1;
        BlockStart start = 2;
        BlockStop stop = 3;
        BlockDel del = 4;

        // Block configuration
        BlockBind bind = 5;
        ConfHookZmq hook_zmq = 6;

        // Application termination
        bool term = 7;
    }
}
